updating to handle 404s
