# models/not_found.go
@@ -1,0 +1,11 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+/*
+NotFound not found
+
+swagger:model NotFound
+*/
+type NotFound interface{}
